fix some mobile alignment issues

--- a/src/components/Rating/Rating.scss
+++ b/src/components/Rating/Rating.scss
@@ -3,13 +3,8 @@
 
 .rating {
   color: $primary;
-  vertical-align: middle;
-  vertical-align: center;
-  position: relative;
-  display: inline;
   @include small-heading;
   font-weight: 700;
-  margin: auto;
 
   @include tablet {
     @include sm-paragraph;
@@ -17,14 +12,13 @@
 
   &__icon {
     @include small-icon;
-    position: absolute;
-    left: ($icon-spacing-unit + $big-icon/2) * -1;
-    top: 0;
-    transform: translateY(-1 * $big-icon/2);
+    position: relative;
+    top: $icon-size/2;
+    left: $icon-spacing-unit;
 
     @include tablet {
-      transform: translateY(-1 * $icon-size/2);
-      left: ($icon-spacing-unit + $icon-size/2) * -1;
+      top: 2px;
+      left: $spacing-unit-xs;
     }
   }
 }
